--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,22 +1,75 @@
+---
+import Header from "../components/Header.astro"
+
+interface Props {
+	title: string;
+	icon?: string;
+}
+
+const { title, icon = "/icons/sparkles.png" } = Astro.props;
+---
+
 <!doctype html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="icon" type="image/svg+xml" href={icon} />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>{title}</title>
 	</head>
 	<body>
+		<Header />
+		<p></p>
 		<slot />
 	</body>
 </html>
 
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
+<!--  https://lospec.com/palette-list/oil-6 -->
+<!-- https://lospec.com/palette-list/midnight-ablaze  -->
+<!-- https://lospec.com/palette-list/berry-nebula -->
+<style is:global>
+	
+body {
+    background-color: var(--background);
+    color: var(--text);
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+p, a, h1, h2, h3, h4 {
+	color: var(--text)
+	text-shadow: 0px 0px 20px var(--light);
+}
+p {
+	font-size: large;
+	font-weight: 550;
+}
+
+
+
+@property --shadow {
+	syntax: "<color>";
+	inherits: false;
+	initial-value: #0d001a;
+}
+@property --background {
+	syntax: "<color>";
+	inherits: false;
+	initial-value: #2e0a30;
+}
+@property --text {
+	syntax: "<color>";
+	inherits: false;
+	initial-value: #6e5181;
+}
+@property --light {
+	syntax: "<color>";
+	inherits: false;
+	initial-value: #6cb9c9;
+}
+@property --accent {
+	syntax: "<color>";
+	inherits: false;
+	initial-value: #6ceded;
+}
+
 </style>
