--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,9 +4,10 @@ import Header from "../components/Header.astro"
 interface Props {
 	title: string;
 	icon?: string;
+	description?: string;
 }
 
-const { title, icon = "/icons/sparkles.png" } = Astro.props;
+const { title, icon = "/icons/sparkles.png", description = "A programmer who likes to create things. Wow so amazing!" } = Astro.props;
 ---
 
 <!doctype html>
@@ -16,6 +17,7 @@ const { title, icon = "/icons/sparkles.png" } = Astro.props;
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="icon" type="image/svg+xml" href={icon} />
 		<meta name="generator" content={Astro.generator} />
+		<meta name="description" content={description} />
 		<title>{title}</title>
 	</head>
 	<body>
