--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,3 +1,10 @@
+---
+const mode = document.getElementById("screenMode");
+mode.onClick = function() {
+    document.style.setProperty("--background", "white");
+};
+---
+
 <header>
     <a href="/">
         <img
