--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,5 @@
 ---
-const mode = document.getElementById("screenMode");
+const mode = Document.getElementById("screenMode");
 mode.onClick = function() {
     document.style.setProperty("--background", "white");
 };
