--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,6 +2,7 @@
 const mode = Document.getElementById("screenMode");
 mode.onClick = function() {
     document.style.setProperty("--background", "white");
+console.log("A");
 };
 ---
 
